overhauled css/html framework to clean out spacing bugs on cards

--- a/css/portfolioStyle.css
+++ b/css/portfolioStyle.css
@@ -114,6 +114,10 @@ body
     background-color: #e5f6fd;
 }
 
+*
+{
+    box-sizing: border-box;
+}
 .main
 {
      /* center */
@@ -126,29 +130,35 @@ body
 .card
 {
     height: 350px;
+    width: 100%;
     
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+    margin-top:25px;
+    
+    position: relative;
+    
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+    display: inline-block;
+    overflow: hidden;
 }
 
 .cover
 {
-    width: 98%;
-    height: 90%;
+    width: 100%;
+    height: calc(100% - 34px);
     -webkit-filter: blur(2px);
     filter: blur(2px);
     
+    padding: 10px;
+    
     /* center */
     position: relative;
-    left: 10px;
-    top: -470px;
-}
-
-.defaultCover
-{
-    background-color: black;
+    top: -320px;
 }
 
 .title
@@ -159,7 +169,7 @@ body
 	text-transform: uppercase;
     
     position: relative;
-    top: -250px;
+    top: -534px;
     z-index: 1;
     
     font-size: 250%;
@@ -176,9 +186,9 @@ body
 {
     position: relative;
    
-    height: 90%;
+    height: calc(100% - 34px);
+    width: 100%;
     z-index: 2;
-    padding: 10px;
     
     background-color: #00678f;
     color: white;
@@ -190,8 +200,6 @@ body
     -o-transition: opacity 0.2s ease-in;
     -ms-transition: opacity 0.2s ease-in;
     transition: opacity 0.2s ease-in;
-    
-    overflow: scroll;
 }
 .details:hover
 {
@@ -200,24 +208,35 @@ body
 
 .details ul
 {
-    
+    display: inline-block;
+    float: left;
     background-color: #005677;
-    padding-left: 35px;
-    padding-right: 30px;
-    padding-top: 30px;
+    
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    height: 110%;
+    
+    margin: 0px;
+    
+    width: calc(30% - 10px);
+    height: 100%;
+    
     position: relative;
-    top: -25px;
-    left: -10px;
+    overflow-y: auto;
+
     z-index: 3;
 }
 
 .textBlock
 {
     position: relative;
-    left: 50px;
-    width: 90%;
+    display: inline-block;
+    float: right;
+    width: calc(70% - 10px);
+    padding: 10px;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .smallIcon
@@ -247,7 +266,7 @@ body
     background-color: white;
     
     position: relative;
-    
+    top: -434px;
     
     border-top-style: solid;
     border-width: 4px;
@@ -257,7 +276,7 @@ body
     border-bottom-right-radius: 10px;
     
     width: 100%;
-    height: 30px;
+    height: 34px;
     
     z-index: 3;
     
@@ -334,7 +353,7 @@ footer
 }
 
 /* MOBILE ==================================================================================================================================================*/
-@media screen and (max-width: 720px)
+@media only screen and (max-width: 720px)
 {
     .main
     {
